@@ -306,3 +306,10 @@ boolean_t used_system_cpu_sysdep(SystemInfo_T *si) {
         }
         return false;
 }
+
+
+boolean_t used_system_filedescriptors_sysdep(SystemInfo_T *si) {
+        // Not implemented
+        return true;
+}
+
